# vscode

./: .eslintrc.json  .git-blame-ignore-revs  .gitignore  .prettierignore  .prettierrc.yml  .travis.yml  .vscodeignore  CHANGELOG.md  LICENSE.txt  PUBLISH.md  QWEN.md  README.md  README_PUBLISH.md  eslint.config.mjs  package-lock.json  package.json  probe-rs-debugger-0.2.0.vsix  tsconfig.json
.github/: README.md  bors.toml
.github/workflows/: ci.yml  publish.yml  update-dap-protocol.yml
.qwen/: settings.json
debug_example/: .gitignore  Cargo.toml  memory.x
debug_example/.cargo/: config.toml
debug_example/src/: debugging_variables.rs  debugging_variables_rtt.rs
src/: debugProtocol.json  extension.ts  remoteServer.ts  utils.ts
src/configuration/: configurationManager.ts
src/debugAdapter/: configurationProvider.ts  debugAdapterProvider.ts  debugAdapterTracker.ts
src/installation/: installationManager.ts
src/liveWatch/: liveWatchCommandService.ts
src/logging/: logger.ts
src/treeViews/: conditionalWatch.ts  conditionalWatchManager.ts  dataTypeFormatter.ts  dataVisualizer.ts  formatManager.ts  historyViewer.ts  index.ts  liveWatchManager.ts  liveWatchModels.ts  liveWatchProvider.ts  liveWatchValueEditor.ts  performanceOptimizer.ts  persistenceManager.ts
src/treeViews/components/: PersistenceManager.ts  index.ts
src/treeViews/models/: index.ts
src/treeViews/providers/: index.ts
src/treeViews/services/: index.ts
src/treeViews/tests/: conditionalWatch.test.ts  historyViewer.test.ts  liveWatchVariable.test.ts  performanceOptimizer.test.ts  persistenceManager.test.ts
src/treeViews/types/: index.ts
src/types/: interfaces.ts
src/web/: extension.ts
